tfportal.de (archived on 2013-12-25)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment;informationtech",
  "char_count": 2008,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.7,
  "homepage_snapshot_redirected_domain": "tfportal.de",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929183227id_/http://www.tfportal.de/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929183227id_/http%3A//tfportal.de",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tfportal.de",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131225025820id_/http%3A//www.tfportal.de%3F54",
  "policy_title": "Imprint \u00ab Article \u00ab Team Fortress 2 - TF2 - TFC - TFPortal",
  "policy_url": "tfportal.de?54",
  "sha1": "96488c57697568d861aa73d1287ad597dab14875",
  "simhash": 13189190977617596436,
  "simhash_updated": true,
  "site_hostname": "tfportal.de",
  "site_url": "http://tfportal.de",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20131225025820",
  "word_count": 304,
  "year": 2013
}

--- a/t/tf/tfp/tfportal.de.html
+++ b/t/tf/tfp/tfportal.de.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tfportal.de privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624105958id_/http%3A//www.tfportal.de%3F54) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tfportal.de privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225025820id_/http%3A//www.tfportal.de%3F54) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de"><head>
 		<title>Imprint « Article « Team Fortress 2 - TF2 - TFC - TFPortal</title>
@@ -8,7 +8,7 @@
 		<meta http-equiv="Content-Style-Type" content="text/css">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta name="author" content="Sven Scholz">
-		<meta name="date" content="2013-06-24">
+		<meta name="date" content="2013-12-25">
 		<meta name="description" lang="de" content="Team Fortress 2 - TF2. News, Downloads, Foren, Blaupausen, Items zu TF2! - Tausche deine TF2 Items im Tausch System mit anderen Usern">
 		<meta name="description" lang="en" content="Team Fortress 2 - TF2. News, downloads, forums, blueprints, guides, items about TF2! - Trade your TF2 Items in the Trade System">  
 		<meta name="keywords" lang="de" content="Team Fortress 2, TF2, Gegenstände, Errungenschaften, Klassen, Waffen, Maps, Wallpapers, Trade, Trade-System, Gamemodes, Tauschen, Trading">
@@ -16,15 +16,12 @@
 		<meta name="robots" content="index,follow">
 		<meta name="language" content="en">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="/min/?f=_css/main.css,_css/etf2l_matchbox.css,_css/snt.css,modules/networkbar/bar.css&amp;1352296292">   
+		<link rel="stylesheet" type="text/css" href="/min/?f=_css/main.css,_css/etf2l_matchbox.css,_css/snt.css,modules/networkbar/bar.css&amp;1385303724">   
 		<link rel="alternate" type="application/rss+xml" title="TFPortal.de - RSS Newsfeed - Deutsch" href="/tfportal_newsfeed_de.xml">
 		<link rel="alternate" type="application/rss+xml" title="TFPortal.de - RSS Newsfeed - English" href="/tfportal_newsfeed_en.xml">
 		<link rel="search" type="application/opensearchdescription+xml" title="TFPORTAL.de Suche" href="/modules/suche/tfportalsearch.xml">
 		<!-- <base href="http://www.tfportal.de/" /> -->
-				<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-		 {lang: 'en-GB'}
-		</script>
-	</head>
+			</head>
 	<body>
 					
 <div id="networkbar">
@@ -102,7 +99,7 @@
 					/* ]]> */</script>
 								</div>
 				<div id="balken">
-					User online: 12									</div>
+					User online: 43									</div>
 	 			<div id="content_bg1">
 	 				<div id="content_bg2">
 	 					<div id="content">							<div id="left_column">
@@ -166,7 +163,7 @@
 	 							</ul>
 								<ul>
 									<li style="margin-top: 10px; width: 123px; text-align: center;">
-                        <a style="margin:auto;" href="/partner.php?7" target="_blank" rel="nofollow"><img src="/gfx/buttons/button_hlportal.gif" alt="Half-Life Portal" title=""></a><br><a style="margin:auto;" href="/partner.php?25" target="_blank" rel="nofollow"><img src="/gfx/buttons/tf2ca.jpg" alt="TF2 Crafting" title=""></a><br><a style="margin:auto;" href="/partner.php?30" target="_blank" rel="nofollow"><img src="/gfx/buttons/steamprices_88x31.png" alt="SteamPrices.com" title=""></a><br><a style="margin:auto;" href="/partner.php?32" target="_blank" rel="nofollow"><img src="/gfx/buttons/commft.png" alt="CommFT" title=""></a><br><a style="margin:auto;" href="/partner.php?33" target="_blank" rel="nofollow"><img src="gfx/buttons/cwclan.gif" alt="CW CLan" title=""></a><br>									</li>
+                        <a style="margin:auto;" href="/partner.php?7" target="_blank" rel="nofollow"><img src="/gfx/buttons/button_hlportal.gif" alt="Half-Life Portal" title=""></a><br><a style="margin:auto;" href="/partner.php?25" target="_blank" rel="nofollow"><img src="/gfx/buttons/tf2ca.jpg" alt="TF2 Crafting" title=""></a><br><a style="margin:auto;" href="/partner.php?30" target="_blank" rel="nofollow"><img src="/gfx/buttons/steamprices_88x31.png" alt="SteamPrices.com" title=""></a><br><a style="margin:auto;" href="/partner.php?33" target="_blank" rel="nofollow"><img src="gfx/buttons/cwclan.png" alt="CW CLan" title=""></a><br><a style="margin:auto;" href="/partner.php?34" target="_blank" rel="nofollow"><img src="/gfx/buttons/backpack_tf.png" alt="Backpack.TF" title=""></a><br>									</li>
 								</ul>
 	 						</div>							<div id="middle_column">
 	 							<div id="topleftcontainer">
@@ -229,7 +226,7 @@
 											<img src="/images/achievements/community.png" height="45" width="45" alt="">
 											<strong>Steam Community</strong>
 											<br>
-											<b>- 1628 Members -</b>
+											<b>- 1603 Members -</b>
 											<br><br>
 											<em>Join Now!</em>
 										</a>
@@ -270,18 +267,17 @@
 										</a>
 									</li>
 	 								<li class="boxContent alternativ">
-										<a href="/items/trade/" title="Trade-System - Trade your Items">
+										<a href="/?4#classes" title="We know everything about your favorite class!">
 											<img src="/images/achievements/gewusst.png" height="45" width="45" alt="">
 											<span>
 												<strong>Did you know?</strong>
 												<br><br>
-												<em>Trade-System - Trade your Items</em>
+												<em>We know everything about your favorite class!</em>
 											</span>
 										</a>
 									</li>
 
 	 							</ul>
-
 	 							<ul id="login">
 	 								<li><h2>Login</h2></li>
 	 								<li class="boxContent">
@@ -313,17 +309,14 @@
 										</form>
 	 								</li>	 						
 	 							</ul>
+
 								<ul id="snt_wrapper">
-									<li><h2>Schottenland.de</h2></li>
+									<li><h2></h2></li>
 
-			<li class="boxContent">
-			<div id="snt" class="snt-statusStarted"><div class="snt-body" style="height: 177px;"><ul style="top: 0px; height: 885px;"><li class="snt-product" style="height: 177px;"><a href="http://www.hardwareschotte.de/preisvergleich/Microsoft-SideWinder-X4-Keyboard-JQD-00008-p20100531" rel="nofollow" target="_blank"><strong>MICROSOFT SideWinder X4 Keyboard (JQD-00008)</strong><br><img src="http://pis2.stc-schottenland.de/na/productImage/?productId=20100531&amp;hash=0b4a219d5e3bdd284488718cbd9edaad&amp;imc=square150" alt="MICROSOFT SideWinder X4 Keyboard (JQD-00008)"><br></a><small>Gaming-Tastatur - Kabelgebunden - 105 Tasten / 18 Sondertasten - USB - Schwarz</small><em>ab 29,90 Euro</em><small>im Preisvergleich</small></li><li class="snt-product" style="height: 177px;"><a href="http://www.hardwareschotte.de/preisvergleich/Roccat-Kone-ROC-11-800-p20345131" rel="nofollow" target="_blank"><strong>ROCCAT Kone [+] (ROC-11-800)</strong><br><img src="http://pis2.stc-schottenland.de/na/productImage/?productId=20345131&amp;hash=387c6b2f27436a44344087ac4c47395f&amp;imc=square150" alt="ROCCAT Kone [+] (ROC-11-800)"><br></a><small>Maus Kabelgebunden - Laser-Sensor (6000 dpi) - 12x Tasten/1x Scrollrad - USB - Schwarz</small><em>ab 54,32 Euro</em><small>im Preisvergleich</small></li><li class="snt-product" style="height: 177px;"><a href="http://www.hardwareschotte.de/preisvergleich/Palit-GeForce-Gtx-770-2GB-GDDR5-NE5X77001042F-p21746360" rel="nofollow" target="_blank"><strong>PALIT GeForce GTX 770 2GB GDDR5 (NE5X77001042F)</strong><br><img src="http://pis1.stc-schottenland.de/na/productImage/?productId=21746360&amp;hash=a87ad45d8a9108fac6b01beb7f62c483&amp;imc=square150" alt="PALIT GeForce GTX 770 2GB GDDR5 (NE5X77001042F)"><br></a><small>nVidia GeForce GTX770 (GK104) (1046MHz) / 2048MB GDDR5 (7010MHz) - 2x DVI/HDMI/DP - PCI Express 3.0</small><em>ab 338,01 Euro</em><small>im Preisvergleich</small></li><li class="snt-product" style="height: 177px;"><a href="http://www.hardwareschotte.de/preisvergleich/Asus-HD7850-DC2-1GD5-90-C1CS63-L0UAY0BZ-p21655494" rel="nofollow" target="_blank"><strong>ASUS HD7850-DC2-1GD5 (90-C1CS63-L0UAY0BZ)</strong><br><img src="http://pis2.stc-schottenland.de/na/productImage/?productId=21655494&amp;hash=848cf690fbb7c6dc8a66dd3af8fc7fe7&amp;imc=square150" alt="ASUS HD7850-DC2-1GD5 (90-C1CS63-L0UAY0BZ)"><br></a><small>AMD Radeon HD7850 (Pitcairn) (870MHz) / 1024MB DDR5 (4840MHz) - DVI/HDMI/2x DP - PCI Express 3.0</small><em>ab 144,37 Euro</em><small>im Preisvergleich</small></li><li class="snt-product" style="height: 177px;"><a href="http://www.hardwareschotte.de/preisvergleich/Gigabyte-Aivia-Osmium-Schwarz-p21667763" rel="nofollow" target="_blank"><strong>GIGABYTE Aivia Osmium Schwarz</strong><br><img src="http://pis1.stc-schottenland.de/na/productImage/?productId=21667763&amp;hash=0ef40993e3ef4e66a805e1e988326a30&amp;imc=square150" alt="GIGABYTE Aivia Osmium Schwarz"><br></a><small>Gaming-Tastatur - Kabelgebunden - 105 Tasten / 10x Sondertasten / Multimedia Tasten - USB</small><em>ab 101,70 Euro</em><small>im Preisvergleich</small></li></ul></div></div>			</li>
-
-	
 									<li class="boxContent" style="text-align: center">
 										<script type="text/javascript"><!--
 										google_ad_client = "ca-pub-0706548582128049";
-										/* TF2 120x600 */
+										// TF2 120x600
 										google_ad_slot = "4907431055";
 										google_ad_width = 120;
 										google_ad_height = 600;
@@ -333,72 +326,7 @@
 										</script>
 									</li>
 								</ul>
-	 				<ul id="threads">
-						<li><h2>Latest Threads</h2></li>
-		 								<li class="boxContent">
-										<a href="http://www.tfportal.de/phpBB3/viewtopic.php?f=18&amp;t=7724&amp;view=unread#unread">Frage zu bestimmter Modifizierung des Steamprofil</a>
-										<br>
-										<span class="info">yesterday, 7:34 pm - Psycho Punch</span>
-									</li>
-
-	 								<li class="boxContent">
-										<a href="http://www.tfportal.de/phpBB3/viewtopic.php?f=54&amp;t=7107&amp;view=unread#unread">Fehler und Bugs Item-Datenbank und Trade-System</a>
-										<br>
-										<span class="info">yesterday, 12:30 pm - Der Ludi</span>
-									</li>
-
-	 								<li class="boxContent">
-										<a href="http://www.tfportal.de/phpBB3/viewtopic.php?f=75&amp;t=7744&amp;view=unread#unread">Payday 2 - Webseries</a>
-										<br>
-										<span class="info">06/21/2013 11:50 pm - uLu_MuLu</span>
-									</li>
-
-	 								<li class="boxContent">
-										<a href="http://www.tfportal.de/phpBB3/viewtopic.php?f=111&amp;t=7353&amp;view=unread#unread">Let's Play TF2</a>
-										<br>
-										<span class="info">06/20/2013 8:10 pm - Cotta42</span>
-									</li>
-
-	 								<li class="boxContent">
-										<a href="http://www.tfportal.de/phpBB3/viewtopic.php?f=18&amp;t=7743&amp;view=unread#unread">TF2 Ingame Menü/Audiosprache Deutsch/Englisch</a>
-										<br>
-										<span class="info">06/20/2013 12:13 pm - metalmaster</span>
-									</li>
-
-	 							</ul>
-	 							<ul id="latestcomments">
-	 								<li><h2>Latest Comments</h2></li>
-	 								<li class="boxContent">
-										<a href="/news/2002/mann-vs-machine-update-day-1-this-is-the-enemy/?cpp=15&amp;com=27638#com27638" title="Mann vs. Machine Update Day 1: This is the enemy!">
-											oben auf" deutschlandflagge klicken, da…										</a>
-										<br>
-										<span class="info">08/15/2012 2:38 pm - KamiKatze</span>
-									</li>
-	 								<li class="boxContent">
-										<a href="/news/2002/mann-vs-machine-update-day-1-this-is-the-enemy/?cpp=15&amp;com=27636#com27636" title="Mann vs. Machine Update Day 1: This is the enemy!">
-											Alle Comments wech ??…										</a>
-										<br>
-										<span class="info">08/15/2012 7:44 am - deziar</span>
-									</li>
-	 								<li class="boxContent">
-										<a href="/news/2002/mann-vs-machine-update-day-1-this-is-the-enemy/?cpp=15&amp;com=27635#com27635" title="Mann vs. Machine Update Day 1: This is the enemy!">
-											Alle Comments wech ??…										</a>
-										<br>
-										<span class="info">08/15/2012 7:44 am - deziar</span>
-									</li>
-	 								<li class="boxContent">
-										<a href="/news/2002/mann-vs-machine-update-day-1-this-is-the-enemy/?cpp=15&amp;com=27634#com27634" title="Mann vs. Machine Update Day 1: This is the enemy!">
-											Alle Comments wech ??…										</a>
-										<br>
-										<span class="info">08/15/2012 7:44 am - deziar</span>
-									</li>
-	 								<li class="boxContent">
-										<a href="/news/1964/mini-update-from-11-06-2012/?cpp=15&amp;com=27109#com27109" title="Mini-Update from 11/06/2012">
-											Hehehehe ganz nett…										</a>
-										<br>
-										<span class="info">06/12/2012 6:55 am - DerHobbyLose</span>
-									</li>
-	 							</ul>
+	 							
 	 							<ul id="files">
 	 								<li><h2>Latest Files</h2></li>
 	 								<li class="boxContent">
@@ -443,8 +371,6 @@
 					pageTracker._trackPageview();
 				} catch(err) {}
 			</script>
-			<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-			<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
 		</div>
 	
 </body></html>
