--- a/m/ma/mas/masalatime.com.html
+++ b/m/ma/mas/masalatime.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the masalatime.com privacy policy that was archived on 2013-05-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130508100452id_/http%3A//www.masalatime.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the masalatime.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225033825id_/http%3A//www.masalatime.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -33,7 +33,7 @@
 
 
 </head>
-<body class="custom" style="background:#000 url(http://www.masalatime.com/img/bg08.jpg) no-repeat center top;	">
+<body class="custom" style="background:#000 url(http://www.masalatime.com/img/bg03.jpg) no-repeat center top;	">
 
 
 <center><div style="float:center;text-align:right;width:890px;margin-top:5px;height:60px;">
@@ -52,7 +52,7 @@ google_ad_height = 60;
 </div>
 </div></center>
 
-<div id="container" style="background: url('http://www.masalatime.com/img/rightbg08.jpg')">
+<div id="container" style="background: url('http://www.masalatime.com/img/rightbg03.jpg')">
 
 
 
@@ -354,16 +354,16 @@ google_ad_height = 250;
 
 
 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=4994" title="" class="link7"> 15 Awesome Redneck Cakes</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6884" title="" class="link7"> Father and Daughter</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=3145" title="" class="link7"> Google Maps Alphabet</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=843" title="" class="link7"> Courage Win</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=4926" title="" class="link7"> Funny Dog Costumes</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=4252" title="" class="link7"> Ultimate Freaks</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=517" title="" class="link7"> Google vs Microsoft vs Yahoo</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=623" title="" class="link7"> High Jump</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=831" title="" class="link7"> 15 Most Unfortunate Town Names</a> <br clear="all"></div> 
-<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6777" title="" class="link7"> No One Shall Pass</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=60" title="" class="link7"> Everybody Run…</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6733" title="" class="link7"> Waffle Art</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=5516" title="" class="link7"> Awesome Bumper Stickers</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6785" title="" class="link7"> Sexy Sand Castle</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=3938" title="" class="link7"> You Too</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=842" title="" class="link7"> Pictures That Make You Say WTF!</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6314" title="" class="link7"> Creative Buildings</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=73" title="" class="link7"> Do you see a couple or a skull?</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=6799" title="" class="link7"> HEY FUCK YOU</a> <br clear="all"></div> 
+<div style="width:294px;padding:8px;">  <a href="http://www.masalatime.com/?p=3996" title="" class="link7"> Drainage Hole Ad</a> <br clear="all"></div> 
   
 </div>
 <br>
