--- a/e/ex/exp/explainthatstuff.com.html
+++ b/e/ex/exp/explainthatstuff.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the explainthatstuff.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624015847id_/http%3A//www.explainthatstuff.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the explainthatstuff.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225040010id_/http%3A//www.explainthatstuff.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
   <link rel="stylesheet" title="default stylesheet" media="screen" type="text/css" href="http://cdn4.explainthatstuff.com/ets2.css">
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Privacy policy: Explain that Stuff!</title>
-  <meta name="ROBOTS" content="NOINDEX,NOFOLLOW">
+  <meta name="ROBOTS" content="NOINDEX,FOLLOW">
   <meta name="description" content="Site privacy policy for Explain that Stuff! website.">
 <link rel="shortcut icon" href="http://cdn4.explainthatstuff.com/favicon.ico">
 </head>
@@ -15,14 +15,13 @@
 
 <body><div class="container"><a name="pagetop"></a>
 
-<div class="header">
-<a class="img" href="/"><img class="headlogo" alt="Explain that Stuff" src="http://cdn4.explainthatstuff.com/dot.gif"></a>
-</div>
 
 
 
 
 
+
+<div class="header"><img class="headlogo" alt="Explain that Stuff" src="http://cdn4.explainthatstuff.com/dot.gif"></div>
 
 <div class="searchtop">
 <!-- SiteSearch Google top search start -->
@@ -55,7 +54,7 @@ Privacy policy
 <div class="nav">
 <ul class="nobull"><li class="inline"><a href="/">Home</a></li>
 <li class="inline"><a href="azindex.html">A-Z index</a></li>
-<li class="inline"><a href="facebook.html">Facebook</a></li>
+<li class="inline"><a href="followus.html">Follow us</a></li>
 <li class="inline"><a href="random.php">Random article</a></li>
 <li class="inline"><a href="mostread.html">Popular</a></li>
 <li class="inline"><a href="timeline.html">Timeline</a></li>
@@ -72,7 +71,7 @@ Privacy policy
 
 <h1>Privacy policy </h1>
 
-<p><i>Last updated: May 2, 2013.</i></p>
+<p><i>Last updated: November 12, 2013.</i></p>
 
 <p>We take privacy issues seriously—and yes everyone says that, but we <span class="italic">really</span> do. Here (in plain English) are full details explaining the careful steps we have taken to respect and protect your privacy as you use our website.</p>
 
@@ -126,11 +125,16 @@ because we don't collect any information about you.</p>
 <p>
 Please be aware, however, that our website runs advertisements on most pages; it is a completely free website and if it didn't run advertising, it would not exist. The advertising partners we work with use what are known as third-party cookies to help them serve up relevant, targeted advertisements that they believe may match your interests. Our partners assure us that these cookies are anonymous and do not use personally identifying information to serve advertisements to you unless you have specifically given permission for that. (Although you might raise an eyebrow at this use of cookies, we believe it is better that advertisers show you advertisements you might find interesting or useful than completely random advertisements.) We have no control over these third-party cookies. We do not see or have access to any information they may store or collect. They pass directly between your computer and the servers run by our advertisers.</p>
 
-<p>
-At the moment, Google is the only advertiser we are working with. Google, as a third party vendor, uses cookies
-(including the DoubleClick DART cookie) to serve advertisements on our website. Google's use of the DART cookie enables it to serve ads to our users based on their visit to our site and other sites on the Internet. You may opt out of the use of the DART cookie by visiting the
-<a target="_blank" href="http://www.google.com/privacy_ads.html">Google ad and content network privacy policy</a>.
-You can learn more about how Google safeguards your privacy by visiting  <a href="http://www.google.com/privacy.html" target="_blank">Google's Privacy Policy</a> website.</p>
+<p>At the moment, we run advertisments through Google.</p>
+
+<p>Third party vendors, including Google, use cookies to serve ads to you based on your prior visits to our website.
+Google's use of the DoubleClick cookie enables it and its partners to serve ads to you based on your visit to our site and/or other sites on the Internet. You may opt out of the use of the DoubleClick cookie for interest-based advertising by visiting
+<a href="http://www.google.com/ads/preferences/" target="_new">Google's Ads Settings</a> page. Alternatively, you can opt out by visiting <a href="http://www.aboutads.info/" target="_new">aboutads.info</a>.
+The cookies of other third-party vendors or ad networks may also be used to serve ads on our site
+and you can opt out of these cookies too by visiting <a href="http://www.aboutads.info/" target="_new">aboutads.info</a>.
+You can learn more about how Google safeguards your privacy by visiting <a href="http://www.google.com/policies/privacy/" target="_blank">Google's Privacy Policy</a> website.</p>
+
+<!--<P>Yahoo Bing network advertisements (powered by Media.net) also use cookies to personalize advertisements so they are "contextual to what you may be reading, but also highly relevant and inclined to your personal interests". If you'd like to opt out of receiving interest-based ads from Media.net, please visit their <a href="http://www.media.net/adchoices" target="_blank">Ad Preferences</A> page.</P>-->
 
 <h2>Social networking sites</h2>
 <p>
@@ -222,27 +226,20 @@ using our <a href="cform.php">email</a> form.</p>
 </div>
 
 
-<div class="main2"><p class="center"><a href="http://www.facebook.com/explainthatstuff" target="_blank" title="Follow us on Facebook"><img class="fbfollow" alt="Follow us on Facebook" src="http://cdn4.explainthatstuff.com/dot.gif"></a> <a rel="publisher" href="https://plus.google.com/115402323314399894520" target="_blank" title="Follow us on Google+"><img class="sprite shr9" alt="Google+" src="http://cdn4.explainthatstuff.com/dot.gif"></a> <a href="rss.xml" target="_blank" title="Subscribe to our RSS feed"><img class="sprite shr10" alt="RSS" src="http://cdn4.explainthatstuff.com/dot.gif"></a> <a href="http://www.flickr.com/photos/explainthatstuff" target="_blank" title="Find our photos on Flickr"><img class="sprite shr11" alt="Flickr" src="http://cdn4.explainthatstuff.com/dot.gif"></a></p></div>
-
-
-
-
-<div class="googlesearch">
-<h2>Can't find what you want? Search our site here!</h2>
-<!--OPTIMIZED FOR BOTTOM OF PAGE  -->
-<!-- SiteSearch Google bottom start -->
-<form action="http://www.explainthatstuff.com/search.html" id="cse-search-box">
-  <div>
-    <input type="hidden" name="cx" value="partner-pub-1030585152417294:2399323853">
-    <input type="hidden" name="cof" value="FORID:10">
-    <input type="hidden" name="ie" value="UTF-8">
-    <input type="text" name="q" size="50">
-    <input type="submit" name="sa" value="Search">
-  </div>
-</form>
-<!-- SiteSearch Google bottom end -->
+<div class="sharesites"><h2>Follow us</h2>
+<ul class="nobull">
+<li class="inline2"><a href="followus.html" title="Follow us on Facebook"><img class="sprite shr4" alt="Follow us on Facebook" src="http://cdn4.explainthatstuff.com/dot.gif"></a></li>
+<li class="inline2"><a rel="publisher" href="https://plus.google.com/115402323314399894520" target="_blank" title="Follow us on Google+"><img class="sprite shr9" alt="Google+" src="http://cdn4.explainthatstuff.com/dot.gif"></a></li>
+<li class="inline2"><a href="rss.xml" target="_blank" title="Subscribe to our RSS feed"><img class="sprite shr10" alt="RSS" src="http://cdn4.explainthatstuff.com/dot.gif"></a></li>
+<li class="inline2"><a href="http://www.flickr.com/photos/explainthatstuff" target="_blank" title="Find our photos on Flickr"><img class="sprite shr11" alt="Flickr" src="http://cdn4.explainthatstuff.com/dot.gif"></a></li>
+<li class="inline2"><a href="http://www.pinterest.com/explainthatstuf/" title="Follow us on Pinterest" target="_blank"><img class="sprite shr12" alt="Follow us on Pinterest" src="http://cdn4.explainthatstuff.com/dot.gif"></a></li>
+</ul>
 </div>
 
+
+
+
+<!-- bottom search position -->
 
 
 
@@ -270,7 +267,7 @@ using our <a href="cform.php">email</a> form.</p>
 <div class="footer">
 <ul class="nobull"><li class="inline"><a href="/">Home</a></li>
 <li class="inline"><a href="azindex.html">A-Z index</a></li>
-<li class="inline"><a href="facebook.html">Facebook</a></li>
+<li class="inline"><a href="followus.html">Follow us</a></li>
 <li class="inline"><a href="random.php">Random article</a></li>
 <li class="inline"><a href="mostread.html">Popular</a></li>
 <li class="inline"><a href="timeline.html">Timeline</a></li>
