--- a/l/lu/lul/lulzbot.com.html
+++ b/l/lu/lul/lulzbot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lulzbot.com privacy policy that was archived on 2013-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130626052643id_/http%3A//www.lulzbot.com%3Fq%3Dcontent/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lulzbot.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225065159id_/http%3A//www.lulzbot.com%3Fq%3Dcontent/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:dc="http://purl.org/dc/terms/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:og="http://ogp.me/ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:sioct="http://rdfs.org/sioc/types#" xmlns:skos="http://www.w3.org/2004/02/skos/core#" xmlns:xsd="http://www.w3.org/2001/XMLSchema#"><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,61 +10,72 @@
 <meta content="Privacy Policy" about="/?q=content/privacy-policy" property="dc:title">
 <meta about="/?q=content/privacy-policy" property="sioc:num_replies" content="0" datatype="xsd:integer">
   <title>Privacy Policy | LulzBot</title>
-  <style type="text/css" media="all">@import url("http://www.lulzbot.com/modules/system/system.base.css?monn1c");
-@import url("http://www.lulzbot.com/modules/system/system.menus.css?monn1c");
-@import url("http://www.lulzbot.com/modules/system/system.messages.css?monn1c");
-@import url("http://www.lulzbot.com/modules/system/system.theme.css?monn1c");</style>
-<style type="text/css" media="all">@import url("http://www.lulzbot.com/sites/all/modules/simplenews/simplenews.css?monn1c");
-@import url("http://www.lulzbot.com/modules/comment/comment.css?monn1c");
-@import url("http://www.lulzbot.com/modules/field/theme/field.css?monn1c");
-@import url("http://www.lulzbot.com/modules/node/node.css?monn1c");
-@import url("http://www.lulzbot.com/modules/search/search.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_attribute/uc_attribute.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_order/uc_order.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_product/uc_product.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_store/uc_store.css?monn1c");
-@import url("http://www.lulzbot.com/modules/user/user.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/views/css/views.css?monn1c");</style>
-<style type="text/css" media="all">@import url("http://www.lulzbot.com/sites/all/modules/colorbox/styles/default/colorbox_default_style.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ctools/css/ctools.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/views_slideshow/views_slideshow.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_cart/uc_cart_block.css?monn1c");
-@import url("http://www.lulzbot.com/sites/all/themes/lulzbot/css/style.css?monn1c");</style>
+  <style type="text/css" media="all">@import url("http://www.lulzbot.com/modules/system/system.base.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/system/system.menus.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/system/system.messages.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/system/system.theme.css?mxppaj");</style>
+<style type="text/css" media="all">@import url("http://www.lulzbot.com/sites/all/modules/simplenews/simplenews.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/comment/comment.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/field/theme/field.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/node/node.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/search/search.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_attribute/uc_attribute.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_order/uc_order.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_product/uc_product.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_store/uc_store.css?mxppaj");
+@import url("http://www.lulzbot.com/modules/user/user.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/views/css/views.css?mxppaj");</style>
+<style type="text/css" media="all">@import url("http://www.lulzbot.com/sites/all/modules/colorbox/styles/default/colorbox_default_style.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ctools/css/ctools.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/views_slideshow/views_slideshow.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/modules/ubercart/uc_cart/uc_cart_block.css?mxppaj");
+@import url("http://www.lulzbot.com/sites/all/themes/lulzbot/css/style.css?mxppaj");</style>
 
 <!--[if lt IE 9]>
-<link type="text/css" rel="stylesheet" href="http://www.lulzbot.com/sites/all/themes/lulzbot/css/ielt9.css?monn1c" media="all" />
+<link type="text/css" rel="stylesheet" href="http://www.lulzbot.com/sites/all/themes/lulzbot/css/ielt9.css?mxppaj" media="all" />
 <![endif]-->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+  <script type="text/javascript" defer="" async="" src="https://analytics.alephobjects.com/piwik/piwik.js"></script><script type="text/javascript">
 <!--//--><![CDATA[//><!--
-window.google_analytics_uacct = "UA-25367528-1";
+/**
+ * @licstart The following is the entire license notice for the JavaScript
+ * code in this page.
+ *
+ * Copyright (C) 2013  LulzBot.
+ *
+ * The JavaScript code in this page is free software: you can redistribute
+ * it and/or modify it under the terms of the GNU General Public License
+ * (GNU GPL) as published by the Free Software Foundation, either version 3
+ * of the License, or (at your option) any later version.  The code is
+ * distributed WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GPL
+ * for more details.
+ *
+ * As additional permission under GNU GPL version 3 section 7, you may
+ * distribute non-source (e.g., minimized or compacted) forms of that code
+ * without the copy of the GNU GPL normally required by section 4, provided
+ * you include this license notice and a URL through which recipients can
+ * access the Corresponding Source.
+ *
+ * @licend The above is the entire license notice for the JavaScript code
+ * in this page.
+ */
 //--><!]]>
 </script>
 <script type="text/javascript" src="http://www.lulzbot.com/misc/jquery.js?v=1.4.4"></script>
 <script type="text/javascript" src="http://www.lulzbot.com/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/misc/drupal.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/libraries/colorbox/colorbox/jquery.colorbox-min.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/styles/default/colorbox_default_style.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox_load.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox_inline.js?monn1c"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/misc/drupal.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/libraries/colorbox/colorbox/jquery.colorbox-min.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/styles/default/colorbox_default_style.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox_load.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/colorbox/js/colorbox_inline.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/views_slideshow/js/views_slideshow.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/misc/ui/jquery.effects.core.min.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/themes/lulzbot/js/jquery.cycle.all.js?mxppaj"></script>
+<script type="text/javascript" src="http://www.lulzbot.com/sites/all/themes/lulzbot/js/scripts.js?mxppaj"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-document.write(unescape("%3Cscript src=\"//checkout.google.com/files/digital/ga_post.js\" type=\"text/javascript\"%3E%3C/script%3E"));
-//--><!]]>
-</script><script src="//checkout.google.com/files/digital/ga_post.js" type="text/javascript"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/views_slideshow/js/views_slideshow.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/modules/google_analytics/googleanalytics.js?monn1c"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-var _gaq = _gaq || [];_gaq.push(["_setAccount", "UA-25367528-1"]);_gaq.push(["_gat._anonymizeIp"]);_gaq.push(["_trackPageview"]);(function() {var ga = document.createElement("script");ga.type = "text/javascript";ga.async = true;ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ga, s);})();
-//--><!]]>
-</script>
-<script type="text/javascript" src="http://www.lulzbot.com/misc/ui/jquery.effects.core.min.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/themes/lulzbot/js/jquery.cycle.all.js?monn1c"></script>
-<script type="text/javascript" src="http://www.lulzbot.com/sites/all/themes/lulzbot/js/scripts.js?monn1c"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"lulzbot","theme_token":"XbbB2HV9fyVr0ccxhrApeyGKlyuXApPlqbTyVe85Yh8","js":{"0":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/libraries\/colorbox\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_default_style.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_inline.js":1,"1":1,"sites\/all\/modules\/views_slideshow\/js\/views_slideshow.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"2":1,"misc\/ui\/jquery.effects.core.min.js":1,"sites\/all\/themes\/lulzbot\/js\/jquery.cycle.all.js":1,"sites\/all\/themes\/lulzbot\/js\/scripts.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_attribute\/uc_attribute.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_default_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/views_slideshow\/views_slideshow.css":1,"sites\/all\/modules\/ubercart\/uc_cart\/uc_cart_block.css":1,"sites\/all\/themes\/lulzbot\/css\/style.css":1,"sites\/all\/themes\/lulzbot\/css\/ielt9.css":1}},"colorbox":{"transition":"elastic","speed":"350","opacity":"0.85","slideshow":false,"slideshowAuto":true,"slideshowSpeed":"2500","slideshowStart":"start slideshow","slideshowStop":"stop slideshow","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","overlayClose":true,"maxWidth":"95%","maxHeight":"95%","initialWidth":"300","initialHeight":"100","fixed":true,"scrolling":true},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"lulzbot","theme_token":"fsb4F-vImKz5L5wJO_fTUgF84dt4_LHFZrNkEeZpMgU","js":{"0":1,"1":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/libraries\/colorbox\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_default_style.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_inline.js":1,"sites\/all\/modules\/views_slideshow\/js\/views_slideshow.js":1,"misc\/ui\/jquery.effects.core.min.js":1,"sites\/all\/themes\/lulzbot\/js\/jquery.cycle.all.js":1,"sites\/all\/themes\/lulzbot\/js\/scripts.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_attribute\/uc_attribute.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_default_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/views_slideshow\/views_slideshow.css":1,"sites\/all\/modules\/ubercart\/uc_cart\/uc_cart_block.css":1,"sites\/all\/themes\/lulzbot\/css\/style.css":1,"sites\/all\/themes\/lulzbot\/css\/ielt9.css":1}},"colorbox":{"transition":"elastic","speed":"350","opacity":"0.85","slideshow":false,"slideshowAuto":true,"slideshowSpeed":"2500","slideshowStart":"start slideshow","slideshowStop":"stop slideshow","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","overlayClose":true,"maxWidth":"95%","maxHeight":"95%","initialWidth":"300","initialHeight":"100","fixed":true,"scrolling":true}});
 //--><!]]>
 </script>
 </head>
@@ -106,12 +117,12 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <input title="Enter the terms you wish to search for." id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" class="form-text" type="text">
 <input type="submit" name="op" value="GO">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
-<input type="hidden" name="form_token" id="a-unique-id" value="5hws4zIkVwLFE-PhV3T2i9cVm4cFAnGccvGhMMdHXVs">
+<input type="hidden" name="form_token" id="a-unique-id" value="1AJ86cs_jltT-meyYfObo0EjN1XPa-H6SBofOgxkZ4U">
 <!--<label for="search_block_form_keys">Custom Search</label>
 <input type="text" maxlength="128" name="search_block_form_keys" id="edit-search_block_form_keys"  size="25" value="" title="Enter the terms you wish to search for." class="form-text" />
 <input type="submit" name="op" value="GO"  />
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form" />
-<input type="hidden" name="form_token" id="a-unique-id" value="5hws4zIkVwLFE-PhV3T2i9cVm4cFAnGccvGhMMdHXVs" />--></div></form>  </div>
+<input type="hidden" name="form_token" id="a-unique-id" value="1AJ86cs_jltT-meyYfObo0EjN1XPa-H6SBofOgxkZ4U" />--></div></form>  </div>
 </div>
   </div>
 			 	<!--<div id="block-search-form">
@@ -280,7 +291,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   
   <div class="content">
     <ul class="menu"><li class="first leaf"><a href="/?q=company">Company</a></li>
-<li class="last leaf"><a href="/?q=company/job-opportunities">Job Opportunities</a></li>
+<li class="leaf"><a href="/?q=company/job-opportunities">Job Opportunities</a></li>
+<li class="last leaf"><a href="/?q=company/sponsorship-form">Sponsorship &amp; Donations</a></li>
 </ul>  </div>
 </div>
 <div id="block-block-5" class="block block-block">
@@ -295,6 +307,11 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 	</div></div></div></div><!-- /#footer-inner --><!-- /#footer --><!-- /#footer-wrapper2 --><!-- /#footer-wrapper1 -->
 
 <!-- /#wrapper -->
-  
+  <a href="/?q=librejs/jslicense" rel="jslicense" style="display: none">JavaScript license information</a><script type="text/javascript">
+<!--//--><![CDATA[//><!--
+var _paq = _paq || [];(function(){var u=(("https:" == document.location.protocol) ? "https://analytics.alephobjects.com/piwik/" : "http://analytics.alephobjects.com/piwik/");_paq.push(["setSiteId", "1"]);_paq.push(["setTrackerUrl", u+"piwik.php"]);_paq.push(["setDoNotTrack", 1]);_paq.push(["trackPageView"]);_paq.push(["enableLinkTracking"]);var d=document,g=d.createElement("script"),s=d.getElementsByTagName("script")[0];g.type="text/javascript";g.defer=true;g.async=true;g.src=u+"piwik.js";s.parentNode.insertBefore(g,s);})();
+//--><!]]>
+</script>
+
 
 </body></html>
