zimmermannwear.com (archived on 2013-12-25)
{
  "alexa_rank": 255496,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 1561,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.61,
  "homepage_snapshot_redirected_domain": "zimmermannwear.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130926223848id_/http://us.zimmermannwear.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130926223848id_/http%3A//zimmermannwear.com",
  "interval": "2013_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "zimmermannwear.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131225083033id_/http%3A//us.zimmermannwear.com/privacy",
  "policy_title": "Privacy",
  "policy_url": "us.zimmermannwear.com/privacy",
  "sha1": "062dfc40f43717ba5579132d645ceabef03701ed",
  "simhash": 13338572435205884624,
  "simhash_updated": false,
  "site_hostname": "zimmermannwear.com",
  "site_url": "http://zimmermannwear.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131225083033",
  "word_count": 257,
  "year": 2013
}

--- a/z/zi/zim/zimmermannwear.com.html
+++ b/z/zi/zim/zimmermannwear.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zimmermannwear.com privacy policy that was archived on 2013-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130626225725id_/http%3A//us.zimmermannwear.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zimmermannwear.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225083033id_/http%3A//us.zimmermannwear.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -20,11 +20,11 @@
 <![endif]-->
 
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/font.1367833063.css" media="all">
-<link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/styles.1368076360.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/styles.1383024615.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/widgets.1367833070.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/default/css/customerlocator/styles.1335507580.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/default/css/warehouse/styles.1335507582.css" media="all">
-<link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/big.1367832971.css" id="ss_big">
+<link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/big.1385003773.css" id="ss_big">
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/print.1367833064.css" media="print">
 <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" src="http://us.zimmermannwear.com/js/prototype/prototype.min.1367832664.js"></script>
 <script type="text/javascript" src="http://us.zimmermannwear.com/js/lib/ccard.1337048328.js"></script>
@@ -39,8 +39,9 @@
 <script type="text/javascript" src="http://us.zimmermannwear.com/js/js/jquery.1367832515.js"></script>
 <script type="text/javascript" src="http://us.zimmermannwear.com/js/mage/translate.1337048328.js"></script>
 <script type="text/javascript" src="http://us.zimmermannwear.com/js/mage/cookies.1337048328.js"></script>
-<script type="text/javascript" src="http://us.zimmermannwear.com/skin/frontend/default/zimm12/js/inc.min.1367832930.js"></script>
+<script type="text/javascript" src="http://us.zimmermannwear.com/skin/frontend/default/zimm12/js/inc.min.1383014706.js"></script>
 <script type="text/javascript" src="http://us.zimmermannwear.com/skin/frontend/default/zimm12/js/menu.1367836068.js"></script>
+<script type="text/javascript" src="http://us.zimmermannwear.com/skin/frontend/default/zimm12/js/jquery.lightbox_me.min.1383014707.js"></script>
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="http://us.zimmermannwear.com/skin/frontend/default/zimm12/css/styles-ie.1367833065.css" media="all" />
 <![endif]-->
@@ -99,9 +100,9 @@ _gaq.push(['_trackPageview']);
 				<a href="http://us.zimmermannwear.com/" title="Zimmermann" class="logo"><strong>Zimmermann</strong><img src="http://us.zimmermannwear.com/skin/frontend/default/zimm12/images/logo_bk.1367833201.png" alt="Zimmermann"></a>
 				
 <ul class="accountlinks links">
-                        <li class="first"><a href="https://us.zimmermannwear.com/customer/account/" title="My Account"><span>My Account</span></a></li>
-                                <li><a href="https://us.zimmermannwear.com/customer/account/login/" title="Log In"><span>Log In</span></a></li>
-                                                                <li class=" last"><a href="http://us.zimmermannwear.com/checkout/cart/" title="(no items)" class="top-link-cart"><span><span>My Bag</span><span class="cartitems">Z</span></span></a></li>
+                        <li class="first"><a href="https://us.zimmermannwear.com/customer/account/?___SID=S" title="My Account"><span>My Account</span></a></li>
+                                <li><a href="https://us.zimmermannwear.com/customer/account/login/?___SID=S" title="Log In"><span>Log In</span></a></li>
+                                                                <li class=" last"><a href="http://us.zimmermannwear.com/checkout/cart/?___SID=U" title="(no items)" class="top-link-cart"><span><span>My Bag</span><span class="cartitems">Z</span></span></a></li>
             </ul>
 		<ul id="nav">
 		<li class="navheader nolink"><a name="shop">shop</a></li>
@@ -150,13 +151,9 @@ _gaq.push(['_trackPageview']);
 <a href="http://us.zimmermannwear.com/swim-and-resort/clothing">
 <span>Clothing</span>
 </a>
-</li><li class="level1 nav-3-3">
+</li><li class="level1 nav-3-3 last">
 <a href="http://us.zimmermannwear.com/swim-and-resort/accessories-shoes">
 <span>Accessories</span>
-</a>
-</li><li class="level1 nav-3-4 last">
-<a href="http://us.zimmermannwear.com/swim-and-resort/kids">
-<span>Kids</span>
 </a>
 </li>
 </ul>
@@ -225,13 +222,14 @@ _gaq.push(['_trackPageview']);
 	<li class="navheader nolink"><a name="view">explore</a></li>
 												<li class="cmsitem nolink">
 				<a onfocus="javascript:{return false;}" onclick="javascript:{return false;}" href="#">RTW Lookbooks</a>
-				<ul class="submenu level1"><li class="item"><a href="http://us.zimmermannwear.com/brand/rtw-lookbooks-us/rtw-us-1" title="Autumn/ Winter 2013 - Class of 2013">Autumn/ Winter 2013 - Class of 2013</a></li><li class="item"><a href="http://us.zimmermannwear.com/brand/rtw-lookbooks-us/rtw-us-2" title="Spring/Summer 2013 - In Concert">Spring/Summer 2013 - In Concert</a></li></ul>			</li>
+				<ul class="submenu level1"><li class="item"><a href="http://us.zimmermannwear.com/brand/rtw-lookbooks-us/rtw-us-1" title="Resort 2014 - Good Love">Resort 2014 - Good Love</a></li><li class="item"><a href="http://us.zimmermannwear.com/brand/rtw-lookbooks-us/rtw-us-2" title="Fall RTW - Class of 2013">Fall RTW - Class of 2013</a></li></ul>			</li>
 								<li class="cmsitem nolink">
 				<a onfocus="javascript:{return false;}" onclick="javascript:{return false;}" href="#">Swim Campaigns</a>
-				<ul class="submenu level1"><li class="item"><a href="http://us.zimmermannwear.com/brand/swim-campaigns-usa/swim-us-1" title="Summer Swim 13/14">Summer Swim 13/14</a></li><li class="item"><a href="http://us.zimmermannwear.com/brand/swim-campaigns-usa/swim-us-2" title="Summer Swim 12/13">Summer Swim 12/13</a></li></ul>			</li>
+				<ul class="submenu level1"><li class="item"><a href="http://us.zimmermannwear.com/brand/swim-campaigns-usa/swim-us-1" title="Resort Swim 14">Resort Swim 14</a></li><li class="item"><a href="http://us.zimmermannwear.com/brand/swim-campaigns-usa/swim-us-2" title="Summer Swim 13/14">Summer Swim 13/14</a></li></ul>			</li>
 					<li class="cmsitem nolink"><a onfocus="javascript:{return false;}" onclick="javascript:{return false;}" href="#">z.immerse</a>
 		<ul class="submenu level1 ">
-			<li class="item"><a href="/immerse/feed">z. feed</a></li>			<li class="item"><a href="/immerse/video">z. video</a></li>		</ul>
+			<li class="item"><a href="/immerse/feed">z. feed</a></li>			<li class="item"><a href="/immerse/video">z. video</a></li>			<li class="item"><a href="/immerse/story">story</a></li>
+		</ul>
 	</li>
 		<li class="item"><a href="/brand/views/zimmermann-stores/">stores</a>
 		<ul class="submenu level1">
