--- a/a/ad/ads/adsblue.com.html
+++ b/a/ad/ads/adsblue.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adsblue.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624012047id_/http%3A//www.adsblue.com/privacy-p22) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adsblue.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225083146id_/http%3A//www.adsblue.com/privacy-p22) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -44,7 +44,16 @@ Adsblue.com values the privacy of information pertaining to its associates. We d
             <div class="form_publish">
                 <strong class="publish_button"><a href="http://www.adsblue.com/item/new">Post Free Ad</a></strong>
             </div>
-<!--Google Ads-->
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-8906549900702649";
+/* AdsBlue HomePage LeaderBoard */
+google_ad_slot = "6223648819";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 
     </div>
