--- a/m/mi/mil/milesfaster.co.uk.html
+++ b/m/mi/mil/milesfaster.co.uk.html
@@ -1,9 +1,8 @@
-<!--The following is the downloaded HTML source of the milesfaster.co.uk privacy policy that was archived on 2012-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20121118004710id_/http%3A//www.milesfaster.co.uk/information/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the milesfaster.co.uk privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225101417id_/http%3A//www.milesfaster.co.uk/information/privacy-policy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="keywords" content="privacy policy">
+<!DOCTYPE html><html lang="en"><head>
+<meta charset="utf-8"><meta name="keywords" content="privacy policy">
 <meta name="description" content="Milesfaster.co.uk privacy policy. How we value, respect and protect your privacy while using our website.">
 <title>Milesfaster.co.uk privacy policy.</title>
 <meta name="robots" content="noindex,follow">
@@ -11,22 +10,22 @@
 <link rel="stylesheet" href="../side.css" type="text/css">
 </head>
 <body><div class="cent">
-<table class="tableside">
-<tbody><tr>
-<td colspan="7" class="tabl">
-<img src="../images/images-a/london-hotels.gif" width="718" height="40" alt="milesfaster.co.uk - London Website"></td></tr>
-<tr>
-<td><a href="../">Main Index</a></td><td>
-<a href="../london-hotels-index.htm">London Hotels A-Z</a></td> 
-<td><a href="../united-kingdom-hotels-uk.htm">UK Hotels</a></td> 
-<td><a href="../world-hotels.htm">World Hotels</a></td> 
-<td><a href="../car-rental.htm">Car Rental</a></td>
-<td><a href="../form/email-milesfaster.htm">Contact</a></td>       
-</tr>
-</tbody></table>
+
+<div style="height:33px;background-color:#0044FF;width:100%;margin-left:auto;margin-right:auto;"><img src="../images/images-a/london-hotels.png" width="718" height="33" alt="milesfaster.co.uk - London Website"></div>
+<nav class="tabalside">
+<div class="tabalsider">
+<span class="tabalsidec" style="width:12%;"><a href="../">Home</a></span>
+<span class="tabalsidec" style="width:20%;"><a href="../london-hotels-index.htm">London Hotels A-Z</a></span>
+<span class="tabalsidec" style="width:12%;"><a href="../united-kingdom-hotels-uk.htm">UK Hotels</a></span>
+<span class="tabalsidec" style="width:24%;"><a href="../ticket-hotel-packages.htm">Theatre/Packages/Offers</a></span>
+<span class="tabalsidec" style="width:20%;"><a href="../world-hotels.htm">World Hotels</a></span>
+<span class="tabalsidec" style="width:12%;"><a href="../form/email-milesfaster.htm">Contact Us</a></span>
+</div>
+</nav>
 <br><h1 style="margin:0px 0px -15px 0px;">Privacy Policy</h1>
 <div class="man inm side">
-
+	<div class="ra xm">&nbsp;&nbsp; FESTIVE BREAKS:</div>
+<a id="olym" href="../christmas-new-year-packages.htm">Christmas/New Year Packages</a>
 <div class="ra">SEARCH LONDON BY:</div>
 <a href="../london-hotels-index.htm">London Hotels A-Z</a>
 <a href="../postcodes/">Postcode</a> 
@@ -34,7 +33,7 @@
 <a href="../map/">London Hotels Map</a>
 <a href="../station/">Tube/Train Station</a>
 <a href="../rating/">Star Rating</a>
-<a href="../cheap-london-hotels.htm">Cheap/Budget</a>
+<a href="../cheap-london-hotels.htm">Budget Hotels</a>
 <a href="../london-hotel-chains.htm">London Chains</a><br>
 <div class="ra">TYPE</div><a href="../postcodes/central-london-hotels.htm">
 Central London Hotels</a> <a href="../london-apartments.htm">Apartments</a> 
@@ -46,7 +45,6 @@ Central London Hotels</a> <a href="../london-apartments.htm">Apartments</a>
 <a href="../2-nights-dinner.htm">2 nights/1st+Dinner</a><br>
 <div class="ra">PACKAGES</div>
 <a href="../london-theatre-breaks.htm">London Theatre Breaks</a>
-<a href="../christmas-new-year-packages.htm">Christmas/New Year Packages</a>
 <a href="../ticket-hotel-packages.htm">All Event Packages/Offers</a><br>
 <div class="ra">AIRPORTS</div>
 <a href="../heathrow-hotels-london.htm">Heathrow Hotels</a>
@@ -64,7 +62,7 @@ We can be contacted using the form &gt;&gt;&gt;<a href="../form/email-milesfaste
 <br>
 At milesfaster.co.uk we take your privacy as seriously as you would 
 yourself. Below we explain the types of information we collect, why we collect 
-it and at 
+	it and at 
 what stage this information is gathered.<br>
 <br>
 For each visitor to our Website, our 
@@ -130,5 +128,6 @@ External links: At various points of our website we link out to external
 websites. Normally these are for information purposes. Our privacy 
 policy covers our website only and for external websites you should 
 check their individual privacy policy.</div><br>
-Copyright © 2002-2012 Milesfaster.co.uk All Rights Reserved</div>
+Copyright © 2002-2013 Milesfaster.co.uk All Rights Reserved</div>
+
 </body></html>
