liveatsexsearch.com (archived on 2013-12-25)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 8333,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.09,
  "homepage_snapshot_redirected_domain": "liveatsexsearch.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131005121956id_/http://www.liveatsexsearch.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131005121956id_/http%3A//liveatsexsearch.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "liveatsexsearch.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131225133818id_/http%3A//www.liveatsexsearch.com/privacy.html%3F",
  "policy_title": "LiveAtSexSearch - Privacy Policy",
  "policy_url": "liveatsexsearch.com/privacy.html?",
  "sha1": "9933d4fafcedd1af525caf289c106dd961fcf057",
  "simhash": 17106835585296640498,
  "simhash_updated": true,
  "site_hostname": "liveatsexsearch.com",
  "site_url": "http://liveatsexsearch.com",
  "smog": 15.43,
  "strict_updated": true,
  "timestamp": "20131225133818",
  "word_count": 1354,
  "year": 2013
}

--- a/l/li/liv/liveatsexsearch.com.html
+++ b/l/li/liv/liveatsexsearch.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the liveatsexsearch.com privacy policy that was archived on 2013-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130626072851id_/http%3A//www.liveatsexsearch.com/privacy.html%3F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liveatsexsearch.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225133818id_/http%3A//www.liveatsexsearch.com/privacy.html%3F) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
-  <title>LiveAtSexSearch - Privacy</title>
+  <title>LiveAtSexSearch - Privacy Policy</title>
 
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130604/style-min.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/shared/css/20130919/style-min.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://m1.nsimg.net/2.0/skin/lass/css/20100831/style-skin-min.css" media="all">
 <!--[if IE 6]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie6.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" href="http://m2.nsimg.net/2.0/shared/css/20130501/ie7.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
@@ -228,7 +228,7 @@
 <noscript>
   <img class="hide" src="http://www.liveatsexsearch.com/pixel/nojs.php" alt="">
 </noscript>
-<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20130416/naiad.js"></script>
+<script type="text/javascript" src="http://m2.nsimg.net/cache/js/bundle/naiad/20131217/naiad.js"></script>
 <script type="text/javascript">
 window.suggestmeyes_loaded = true;
 Naiad.Init({mediabase:'http://m1.nsimg.net',state:'',wwwbase:location.protocol+'//'+location.hostname});
@@ -252,7 +252,15 @@ Naiad.OnDomReadyQueue([ 50, function() {
 <script id="sanet" type="text/javascript">
 try
 {
-  SAN.Naiad.init({cookie_domain: '.liveatsexsearch.com'});
+  if (typeof Naiad !== 'undefined' && Naiad.OnDomReadyQueue) {
+    Naiad.OnDomReadyQueue([1, function () {
+      SAN.Naiad.init({cookie_domain: '.liveatsexsearch.com'});
+    }]);
+  } else {
+    $(function () {
+      SAN.Naiad.init({cookie_domain: '.liveatsexsearch.com'});
+    });
+  }
 }
 catch(e)
 {
