durhamtech.edu (archived on 2013-12-26)
{
  "alexa_rank": 179042,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1109,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "durhamtech.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130928023739id_/http://durhamtech.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130928023739id_/http%3A//durhamtech.edu",
  "interval": "2013_B",
  "link_text": "Privacy Policy \u00b7",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "durhamtech.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226015628id_/http%3A//durhamtech.edu/html/privacy.htm",
  "policy_title": "Durham Technical Community College Web Site Privacy Policy",
  "policy_url": "durhamtech.edu/html/privacy.htm",
  "sha1": "75bb5769533c9d40b92525c6d4d6dd03d0cabf71",
  "simhash": 11937512537151609939,
  "simhash_updated": false,
  "site_hostname": "durhamtech.edu",
  "site_url": "http://durhamtech.edu",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131226015628",
  "word_count": 174,
  "year": 2013
}

--- a/d/du/dur/durhamtech.edu.html
+++ b/d/du/dur/durhamtech.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the durhamtech.edu privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624123232id_/http%3A//durhamtech.edu/html/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the durhamtech.edu privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226015628id_/http%3A//durhamtech.edu/html/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD  HTML  4.01  Transitional//EN"><html lang="EN"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,18 +8,6 @@
 <meta name="Keywords" content="privacy,policy">
 <meta name="Description" content="Privacy Policy for Durham Tech Web Site">
 <title> Durham Technical Community College Web Site Privacy Policy</title>
-<script language="JavaScript">
-<!--
-
-
-
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-//-->
-</script>
 <link href="css/netlargelinks.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 <!--
@@ -28,7 +16,7 @@ function MM_preloadImages() { //v3.0
 </style>
 </head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="80" name="headline table" summary="table for layout of the logo and photos of college students">
     <tbody><tr>
       <td><a href="#content"><img src="../graphics/clear_pix.gif" alt="skip navigation" width="1" height="1" border="0"></a><br>
