medixselect.com (archived on 2013-12-26)
{
  "alexa_rank": 320354,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 15836,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.85,
  "homepage_snapshot_redirected_domain": "medixselect.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131008024719id_/http://www.medixselect.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131008024719id_/http%3A//medixselect.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "medixselect.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226053130id_/http%3A//www.medixselect.com/event/page/pageCode/privacy",
  "policy_title": "Privacy Policy | Medix Select",
  "policy_url": "medixselect.com/event/page/pageCode/privacy",
  "sha1": "4edb568c8fee176b96bc0bb51c8a3f693afede4b",
  "simhash": 12259752917827428603,
  "simhash_updated": false,
  "site_hostname": "medixselect.com",
  "site_url": "http://medixselect.com",
  "smog": 17.73,
  "strict_updated": false,
  "timestamp": "20131226053130",
  "word_count": 2607,
  "year": 2013
}

--- a/m/me/med/medixselect.com.html
+++ b/m/me/med/medixselect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the medixselect.com privacy policy that was archived on 2013-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130531115613id_/http%3A//medixselect.com/event/page/pageCode/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the medixselect.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226053130id_/http%3A//www.medixselect.com/event/page/pageCode/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,7 +12,7 @@
 <meta property="og:url" content="http://medixselect.com">
 <meta property="og:site_name" content="">
 <meta property="og:description" content="Medix Select takes pride in protecting your privacy. To better protect our customers, we provide our privacy policy explaining our information practice.">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" src="/view/script/qforms.js"></script><script language="JavaScript1.2">_jsver = 12;</script><script language="JavaScript1.3">_jsver = 13;</script><script language="JavaScript1.4">_jsver = 14;</script><script language="JavaScript1.5">_jsver = 15;</script>
+<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/view/script/qforms.js"></script><script language="JavaScript1.2">_jsver = 12;</script><script language="JavaScript1.3">_jsver = 13;</script><script language="JavaScript1.4">_jsver = 14;</script><script language="JavaScript1.5">_jsver = 15;</script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 <script type="text/javascript" src="/view/script/jqzoom/jqzoom.pack.1.0.1.js"></script>
 <script type="text/javascript" src="/view/script/jquery/cycle/jquery.cycle.all.min.js"></script>
@@ -34,6 +34,22 @@ qFormAPI.include("validation_addon");
 <link rel="stylesheet" type="text/css" href="/view/script/jqzoom/jqzoom.css">
 <link rel="stylesheet" type="text/css" href="/view/css/colorbox/01/colorbox.css">
 <link rel="stylesheet" href="/view/css/agile_newsmax.css" type="text/css">
+<script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(
+['_setAccount', 'UA-16963874-1']
+, ['_setDomainName','medixselect.com']
+, ['_setCookiePath','/']
+, ['_setAllowLinker', true]
+, ['_trackPageview']
+, ['_setLocalRemoteServerMode']
+);
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -1388,24 +1404,6 @@ The statements made on this website have not been evaluated by the Food and Drug
 </tr>
 </tbody></table>
 <!-- END Footer Disclaimer Content Block -->
-<!-- BEGIN Google Analytics Tracking Content Block -->
-<table id="block.googleanalyticstracking" cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
-<tbody><tr>
-<td><script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-16963874-1']);
-_gaq.push(['_setDomainName', 'medixselect.com']);
-_gaq.push(['_setAllowLinker', true]);
-_gaq.push(['_trackPageview']);
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script></td>
-</tr>
-</tbody></table>
-<!-- END Google Analytics Tracking Content Block -->
 <!-- BEGIN Custom Tracking Pixel Block View -->
 <img src="http://www.medixselectdeals.com/?src=&amp;promo_code=" width="1" height="1" border="0">
 <!-- END Custom Tracking Pixel Block View -->
@@ -1423,6 +1421,32 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </tr>
 </tbody></table>
 <!-- END Tracking Pixel - Contextin - Main RT Content Block -->
+<!-- BEGIN Remarketing Tag For Entire Website Content Block -->
+<table id="block.remarketingtagforentirewebsite" cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
+<tbody><tr>
+<td><!-- Google Code for Remarketing Tag --><!--------------------------------------------------
+Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
+---------------------------------------------------><script type="text/javascript">
+var google_tag_params = {
+ecomm_prodid: 'REPLACE_WITH_VALUE',
+ecomm_pagetype: 'REPLACE_WITH_VALUE',
+ecomm_totalvalue: 'REPLACE_WITH_VALUE',
+};
+</script><script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1016001547;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script><script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script><noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1016001547/?value=0&guid=ON&script=0"/>
+</div>
+</noscript></td>
+</tr>
+</tbody></table>
+<!-- END Remarketing Tag For Entire Website Content Block -->
 </td>
 </tr>
 </tbody></table><script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f6ca4df7f0fd0e9"></script>
